--- a/bundesliga/notebooks/test2.ipynb
+++ b/bundesliga/notebooks/test2.ipynb
@@ -2,6 +2,141 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext kedro.ipython\n",
+    "%reload_kedro\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'f2_active_model_parameters': {'model': 'f2', 'test_size': 0.2, 'random_seed': 42, 'model_config': {'prior_params': {'score': {'tau': 1.0, 'mu': 0.0}, 'offence_defence_diff': {'tau': 1.0, 'mu': 1.75}, 'home_advantage': {'tau': 10.0, 'mu': 0.0}, 'weights': {'tau': 100.0, 'mu': [0.0, 0.25, -0.25]}}, 'features': ['home_id', 'away_id'], 'targets': ['home_goals', 'away_goals']}, 'sampler_config': {'chains': 2, 'draws': 2000, 'tune': 200, 'target_accept': 0.85, 'random_seed': 42}, 'plot_params': {'max_goals': 8, 'team_1': 'Augsburg', 'team_2': 'Bochum'}}, 'f1_active_model_parameters': {'model': 'f1', 'test_size': 0.2, 'random_seed': 42, 'model_config': {'prior_params': {'off_mu': 1.75, 'off_tau': 1.0, 'def_mu': 0.0, 'def_tau': 1.0}, 'features': ['home_id', 'away_id'], 'targets': ['home_goals', 'away_goals']}, 'sampler_config': {'chains': 2, 'draws': 2000, 'tune': 200, 'target_accept': 0.85, 'random_seed': 42}, 'plot_params': {'max_goals': 8, 'team_1': 'Augsburg', 'team_2': 'Bochum'}}, 'sampler_config': {'chains': 2, 'draws': 2000, 'tune': 200, 'target_accept': 0.85, 'random_seed': 42}}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #800000; text-decoration-color: #800000\">╭─────────────────────────────── </span><span style=\"color: #800000; text-decoration-color: #800000; font-weight: bold\">Traceback </span><span style=\"color: #bf7f7f; text-decoration-color: #bf7f7f; font-weight: bold\">(most recent call last)</span><span style=\"color: #800000; text-decoration-color: #800000\"> ────────────────────────────────╮</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #808000; text-decoration-color: #808000\">H:\\TEMP\\ipykernel_12352\\801244664.py</span>:<span style=\"color: #0000ff; text-decoration-color: #0000ff\">47</span> in <span style=\"color: #00ff00; text-decoration-color: #00ff00\">&lt;module&gt;</span>                                              <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>                                                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">44 </span>                                                                                            <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">45 </span>                                                                                            <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">46 </span>x_data = pd.DataFrame(data={<span style=\"color: #808000; text-decoration-color: #808000\">\"home_team\"</span>: [<span style=\"color: #0000ff; text-decoration-color: #0000ff\">1</span>, <span style=\"color: #0000ff; text-decoration-color: #0000ff\">4</span>], <span style=\"color: #808000; text-decoration-color: #808000\">\"away_team\"</span>: [<span style=\"color: #0000ff; text-decoration-color: #0000ff\">2</span>, <span style=\"color: #0000ff; text-decoration-color: #0000ff\">6</span>]})                      <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #800000; text-decoration-color: #800000\">❱ </span>47 posterior_predictive = <span style=\"font-weight: bold; text-decoration: underline\">predict(x_data)</span>                                                      <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">48 </span>posterior_predictive                                                                        <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">49 </span>                                                                                            <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>                                                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #808000; text-decoration-color: #808000\">H:\\TEMP\\ipykernel_12352\\801244664.py</span>:<span style=\"color: #0000ff; text-decoration-color: #0000ff\">35</span> in <span style=\"color: #00ff00; text-decoration-color: #00ff00\">predict</span>                                               <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>                                                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">32 </span><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">│   </span>fname = <span style=\"color: #808000; text-decoration-color: #808000\">\"S:/___Studium/Bachelor_Arbeit/ba_env/bundesliga/data/06_models/bkp_model_1_</span>    <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">33 </span><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">│   </span>model = FootballModel(                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">34 </span><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">│   │   </span>sampler_config=sampler_config, model_config=model_config                            <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #800000; text-decoration-color: #800000\">❱ </span>35 <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">│   </span>).<span style=\"font-weight: bold; text-decoration: underline\">load(fname)</span>                                                                           <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">36 </span><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">│   </span>                                                                                        <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">37 </span><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">│   </span><span style=\"color: #0000ff; text-decoration-color: #0000ff\">with</span> model:                                                                             <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">38 </span><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">│   │   </span><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"># Rekonstruiere Posterior Predictive</span>                                                <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>                                                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #808000; text-decoration-color: #808000\">h:\\Programs\\Anaconda\\envs\\.conda_ba_env\\Lib\\site-packages\\pymc_experimental\\model_builder.py</span>:<span style=\"color: #0000ff; text-decoration-color: #0000ff\">441</span> <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> in <span style=\"color: #00ff00; text-decoration-color: #00ff00\">load</span>                                                                                          <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">╰──────────────────────────────────────────────────────────────────────────────────────────────────╯</span>\n",
+       "<span style=\"color: #ff0000; text-decoration-color: #ff0000; font-weight: bold\">KeyError: </span><span style=\"color: #008000; text-decoration-color: #008000\">'model_config'</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[31m╭─\u001b[0m\u001b[31m──────────────────────────────\u001b[0m\u001b[31m \u001b[0m\u001b[1;31mTraceback \u001b[0m\u001b[1;2;31m(most recent call last)\u001b[0m\u001b[31m \u001b[0m\u001b[31m───────────────────────────────\u001b[0m\u001b[31m─╮\u001b[0m\n",
+       "\u001b[31m│\u001b[0m \u001b[33mH:\\TEMP\\ipykernel_12352\\801244664.py\u001b[0m:\u001b[94m47\u001b[0m in \u001b[92m<module>\u001b[0m                                              \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m                                                                                                  \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m44 \u001b[0m                                                                                            \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m45 \u001b[0m                                                                                            \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m46 \u001b[0mx_data = pd.DataFrame(data={\u001b[33m\"\u001b[0m\u001b[33mhome_team\u001b[0m\u001b[33m\"\u001b[0m: [\u001b[94m1\u001b[0m, \u001b[94m4\u001b[0m], \u001b[33m\"\u001b[0m\u001b[33maway_team\u001b[0m\u001b[33m\"\u001b[0m: [\u001b[94m2\u001b[0m, \u001b[94m6\u001b[0m]})                      \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m \u001b[31m❱ \u001b[0m47 posterior_predictive = \u001b[1;4mpredict(x_data)\u001b[0m                                                      \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m48 \u001b[0mposterior_predictive                                                                        \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m49 \u001b[0m                                                                                            \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m                                                                                                  \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m \u001b[33mH:\\TEMP\\ipykernel_12352\\801244664.py\u001b[0m:\u001b[94m35\u001b[0m in \u001b[92mpredict\u001b[0m                                               \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m                                                                                                  \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m32 \u001b[0m\u001b[2m│   \u001b[0mfname = \u001b[33m\"\u001b[0m\u001b[33mS:/___Studium/Bachelor_Arbeit/ba_env/bundesliga/data/06_models/bkp_model_1_\u001b[0m    \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m33 \u001b[0m\u001b[2m│   \u001b[0mmodel = FootballModel(                                                                  \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m34 \u001b[0m\u001b[2m│   │   \u001b[0msampler_config=sampler_config, model_config=model_config                            \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m \u001b[31m❱ \u001b[0m35 \u001b[2m│   \u001b[0m).\u001b[1;4mload(fname)\u001b[0m                                                                           \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m36 \u001b[0m\u001b[2m│   \u001b[0m                                                                                        \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m37 \u001b[0m\u001b[2m│   \u001b[0m\u001b[94mwith\u001b[0m model:                                                                             \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m38 \u001b[0m\u001b[2m│   │   \u001b[0m\u001b[2m# Rekonstruiere Posterior Predictive\u001b[0m                                                \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m                                                                                                  \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m \u001b[33mh:\\Programs\\Anaconda\\envs\\.conda_ba_env\\Lib\\site-packages\\pymc_experimental\\model_builder.py\u001b[0m:\u001b[94m441\u001b[0m \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m in \u001b[92mload\u001b[0m                                                                                          \u001b[31m│\u001b[0m\n",
+       "\u001b[31m╰──────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
+       "\u001b[1;91mKeyError: \u001b[0m\u001b[32m'model_config'\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from modelbuilder import FootballModel\n",
+    "import pymc as pm\n",
+    "import pandas as pd\n",
+    "import yaml\n",
+    "\n",
+    "# sampler_config = {\n",
+    "#     \"sampler_config\": {\n",
+    "#         \"chains\": 2,\n",
+    "#         \"draws\": 2000,\n",
+    "#         \"tune\": 200,  # toDo: 10% of draws,\n",
+    "#         \"target_accept\": 0.85,\n",
+    "#         \"random_seed\": 42,\n",
+    "#     }\n",
+    "# }\n",
+    "# model_config = {\n",
+    "#     \"modelconfig\": {\n",
+    "#         \"prior_params\": {\"off_mu\": 1.75, \"off_tau\": 1.0, \"def_mu\": 0.0, \"def_tau\": 1.0},\n",
+    "#         \"features\": [\"home_id\", \"away_id\"],\n",
+    "#         \"targets\": [\"home_goals\", \"away_goals\"],\n",
+    "#     }\n",
+    "# }\n",
+    "import yaml\n",
+    "\n",
+    "with open(\"../conf/base/parameters_data_science.yml\", encoding=\"utf-8\") as yaml_file:\n",
+    "    params = yaml.safe_load(yaml_file)\n",
+    "print(params)\n",
+    "sampler_config = params[\"f1_active_model_parameters\"]\n",
+    "model_config = params[\"f1_active_model_parameters\"]\n",
+    "\n",
+    "\n",
+    "def predict(x_data):\n",
+    "    fname = \"S:/___Studium/Bachelor_Arbeit/ba_env/bundesliga/data/06_models/bkp_model_1_idata_active.nc\"\n",
+    "    model = FootballModel(\n",
+    "        sampler_config=sampler_config, model_config=model_config\n",
+    "    ).load(fname)\n",
+    "\n",
+    "    with model:\n",
+    "        # Rekonstruiere Posterior Predictive\n",
+    "        posterior_predictive = pm.sample_posterior_predictive(\n",
+    "            x_data, var_names=[\"home_score\", \"away_score\"]\n",
+    "        )\n",
+    "\n",
+    "    return posterior_predictive\n",
+    "\n",
+    "\n",
+    "x_data = pd.DataFrame(data={\"home_team\": [1, 4], \"away_team\": [2, 6]})\n",
+    "posterior_predictive = predict(x_data)\n",
+    "posterior_predictive\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -169,7 +304,7 @@
     "%load_ext kedro.ipython\n",
     "%reload_kedro\n",
     "%load_ext autoreload\n",
-    "%autoreload 2\n"
+    "%autoreload 2"
    ]
   },
   {
@@ -261,7 +396,7 @@
     "    # list of tuples\n",
     "    # (home_team-index, away_team_index, scored_goals of home team resp. away team)\n",
     "\n",
-    "    return _vectorized_data(home_goals_, away_goals_), team_indices\n"
+    "    return _vectorized_data(home_goals_, away_goals_), team_indices"
    ]
   },
   {
@@ -570,16 +705,16 @@
     "        self.X = X\n",
     "        self.y = goals\n",
     "\n",
-    "        \n",
+    "\n",
     "df = catalog.load(\"D1_24-25\")  # type: pd.DataFrame\n",
     "X = preprocess_league_data(df)[0]\n",
     "x_input = X[[\"home_id\", \"away_id\"]]\n",
     "goals = X[[\"home_goals\", \"away_goals\"]]\n",
-    "t = goals['home_goals']\n",
+    "t = goals[\"home_goals\"]\n",
     "\n",
     "model = FootballModel()\n",
     "\n",
-    "model.fit(x_input,goals )\n",
+    "model.fit(x_input, goals)\n",
     "\n",
     "\n",
     "type(model.y.values)"
